<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/activeIndicator"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/active_status"
            android:src="@drawable/ic_active_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/startTimeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/startTimeTextView"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/startTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toEndOf="@id/activeIndicator"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22:00" />

        <TextView
            android:id="@+id/timeSeparator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="-"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBaseline_toBaselineOf="@id/startTimeTextView"
            app:layout_constraintStart_toEndOf="@id/startTimeTextView" />

        <TextView
            android:id="@+id/endTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBaseline_toBaselineOf="@id/startTimeTextView"
            app:layout_constraintStart_toEndOf="@id/timeSeparator"
            tools:text="09:00" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/activeStatusSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startTimeTextView"
            tools:text="Sorry, I'm busy right now. I'll get back to you later." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@id/editButton"
            app:layout_constraintTop_toBottomOf="@id/messageTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/deleteButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>